--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -97,8 +97,10 @@ body.lock {
     font-size: 26px;
     line-height: 30 / 26 * 100%;
     padding: 0 40px;
-    border: none;
+    border: 0 !important;
     cursor: pointer;
+    outline: none;
+    transition: all .3s;
     &:hover{
         background-color: #4eaa6a;
     }
@@ -129,6 +131,8 @@ body.lock {
     line-height: 30 / 26 * 100%;
     padding: 0 40px;
     cursor: pointer;
+    outline: none;
+    transition: all .3s;
     &:hover{
         color: #4eaa6a;
         border: 6px solid #4eaa6a;
