--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1044,6 +1044,41 @@ body.lock {
   left: 79px;
   max-width: 270px
 }
+.gallery {
+  padding: 54px 0 50px
+}
+.gallery__title {
+  margin-bottom: 65px;
+  text-align: center
+}
+.gallery__wrapper {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 365px 1fr;
+  grid-template-columns: 1fr 1fr 365px 1fr;
+  grid-auto-rows: 408px
+}
+.gallery__wrapper img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover
+}
+.gallery__box-1 {
+  -ms-grid-column: 1;
+  grid-column-start: 1;
+  -ms-grid-column-span: 2;
+  grid-column-end: 3
+}
+.gallery__box-2 {
+  -ms-grid-column: 3;
+  grid-column-start: 3;
+  -ms-grid-row: 1;
+  grid-row-start: 1;
+  -ms-grid-row-span: 2;
+  grid-row-end: 3
+}
 .our-elephants {
   padding: 54px 0 74px;
   text-align: center
@@ -1514,6 +1549,19 @@ body.lock {
     font-size: 25px
   }
 }
+@media (max-width:1550px) {
+  .gallery__wrapper {
+    -ms-grid-columns: 2fr 2fr;
+    grid-template-columns: 2fr 2fr;
+    grid-auto-rows: 280px
+  }
+  .gallery__box-6 {
+    -ms-grid-column: 2;
+    grid-column-start: 2;
+    -ms-grid-column-span: 2;
+    grid-column-end: 4
+  }
+}
 @media (max-width:1450px) {
   .about__item {
     padding: 45px 30px;
@@ -1634,6 +1682,27 @@ body.lock {
   }
   .our-elephants__info {
     max-width: 388px
+  }
+}
+@media (max-width:1023px) {
+  .gallery__wrapper {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 180px
+  }
+  .gallery__box-1 {
+    -ms-grid-column-span: 4;
+    grid-column-end: 4
+  }
+  .gallery__box-2 {
+    -ms-grid-row: 3;
+    grid-row-start: 3;
+    -ms-grid-row-span: 1;
+    grid-row-end: 4
+  }
+  .gallery__box-6 {
+    -ms-grid-column-span: 3;
+    grid-column-end: 3
   }
 }
 @media (max-width:1000px) {
@@ -1877,6 +1946,12 @@ body.lock {
     font-size: 60px;
     line-height: 70px
   }
+  .gallery {
+    padding: 35px 0 25px
+  }
+  .gallery__title {
+    margin-bottom: 40px
+  }
   .our-elephants {
     padding: 34px 0 44px
   }
@@ -2010,6 +2085,7 @@ body.lock {
     height: 46px
   }
   .our-elephants__item img {
+    max-height: 160px;
     width: 100%;
     -o-object-fit: cover;
     object-fit: cover;
@@ -2047,6 +2123,9 @@ body.lock {
   }
 }
 @media (max-width:426px) {
+  .gallery__wrapper {
+    grid-auto-rows: 100px
+  }
   .reviews__box:last-child {
     margin-bottom: 0
   }
@@ -2095,6 +2174,12 @@ body.lock {
   .about__item-num {
     font-size: 40px;
     line-height: 60px
+  }
+  .gallery {
+    padding: 25px 0 25px
+  }
+  .gallery__title {
+    margin-bottom: 25px
   }
   .our-elephants__title {
     margin-bottom: 25px
