--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -266,6 +266,73 @@
     }
 }
 
+.gallery {
+    padding: 54px 0 50px;
+    @media (max-width: 767px) {
+        padding: 35px 0 25px;
+    }
+    @media (max-width: 320px) {
+        padding: 25px 0 25px;
+    }
+    &__title {
+        margin-bottom: 65px;
+        text-align: center;
+        @media (max-width: 767px) {
+            margin-bottom: 40px;
+        }
+        @media (max-width: 320px) {
+            margin-bottom: 25px;
+        }
+    }
+    &__wrapper {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 365px 1fr;
+        grid-auto-rows: 408px;
+        @media (max-width: 1550px) {
+            grid-template-columns: 2fr 2fr;
+            grid-auto-rows: 280px;
+        }
+        @media (max-width: 1023px) {
+            grid-template-columns: 1fr;
+            grid-auto-rows: 180px;
+        }
+        @media (max-width:426px){
+            grid-auto-rows: 100px;
+        }
+        & img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+    &__box-1 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        @media (max-width: 1023px) {
+            grid-column-end: 4;
+        }
+    }
+    &__box-2 {
+        grid-column-start: 3;
+        grid-row-start: 1;
+        grid-row-end: 3;
+        @media (max-width: 1023px) {
+            grid-row-start: 3;
+            grid-row-end: 4;
+        }
+    }
+    &__box-6 {
+        @media (max-width: 1550px) {
+            grid-column-start: 2;
+            grid-column-end: 4;
+        }
+        @media (max-width: 1023px) {
+            grid-column-end: 3;
+        }
+    }
+}
+
 .our-elephants {
     padding: 54px 0 74px;
     text-align: center;
@@ -308,6 +375,7 @@
                 object-fit: cover;
             }
             @media (max-width: 576px) {
+                max-height: 160px;
                 width: 100%;
                 object-fit: cover;
                 margin-bottom: 15px;
@@ -783,8 +851,8 @@
             font-size: 22px;
             line-height: 38 / 22 * 100%;
             margin-bottom: 15px;
-            transition: all .3s;
-            &:hover{
+            transition: all 0.3s;
+            &:hover {
                 color: #62cc82;
             }
             @media (max-width: 320px) {
@@ -809,7 +877,7 @@
     @media (max-width: 767px) {
         padding: 44px 0 50px;
     }
-    &__container{
+    &__container {
         max-width: 1035px;
         padding: 0 20px;
         margin: 0 auto;
@@ -824,7 +892,7 @@
     &__inner {
         display: flex;
         justify-content: space-between;
-        @media (max-width:940px) {
+        @media (max-width: 940px) {
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -834,7 +902,7 @@
         display: flex;
         margin-bottom: 38px;
         align-items: center;
-        @media (max-width:576px) {
+        @media (max-width: 576px) {
             margin-bottom: 25px;
         }
     }
@@ -842,13 +910,13 @@
         margin-right: 25px;
         width: 60px;
         height: 60px;
-        img{
-            @media (max-width:576px) {
+        img {
+            @media (max-width: 576px) {
                 width: 30px;
                 height: 30px;
             }
         }
-        @media (max-width:576px) {
+        @media (max-width: 576px) {
             margin: 0 20px 0 0;
             width: fit-content;
             height: fit-content;
@@ -859,22 +927,22 @@
         line-height: 49 / 40 * 100%;
         color: #000;
         @extend %myriadpro-regular;
-        transition: all .3s;
-        &:hover{
-            color: #61cb81;  
+        transition: all 0.3s;
+        &:hover {
+            color: #61cb81;
         }
-        @media (min-width:1200px){
+        @media (min-width: 1200px) {
             font-size: 25px;
         }
-        @media (max-width:576px) {
+        @media (max-width: 576px) {
             font-size: 20px;
         }
-        span{
+        span {
             border-bottom: 1px solid #62cc82;
         }
     }
     &__addresses {
-        @media (max-width:940px) {
+        @media (max-width: 940px) {
             text-align: center;
         }
         &-item {
@@ -894,18 +962,18 @@
     }
 }
 
-.mailing{
+.mailing {
     padding: 100px 0 70px;
     background-color: #fbfbf7;
     @media (max-width: 767px) {
         padding: 50px 0 40px;
     }
-    &__container{
+    &__container {
         max-width: 790px;
         padding: 0 20px;
         margin: 0 auto;
     }
-    &__description{
+    &__description {
         margin-bottom: 58px;
         @media (max-width: 767px) {
             margin-bottom: 40px;
@@ -913,7 +981,7 @@
     }
 }
 
-.form{
+.form {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -923,7 +991,7 @@
         align-items: center;
         justify-content: center;
     }
-    &__input{
+    &__input {
         flex: 0 0 50%;
         max-width: 345px;
         background-color: #fff;
@@ -938,7 +1006,7 @@
             width: 100%;
         }
     }
-    &__btn{
+    &__btn {
         width: 370px;
         @media (max-width: 767px) {
             max-width: 345px;
@@ -946,7 +1014,3 @@
         }
     }
 }
-
-
-
-
