--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -21,9 +21,9 @@
 }
 
 @font-face {
-  font-family: 'Circe-ExtraBold';
+  font-family: 'Circe ExtraBold';
   src: url('../fonts/Circe-ExtraBold.eot');
-  src: local('Circe Regular'), 
+  src: local('Circe ExtraBold'), 
        url('../fonts/Circe-ExtraBold.woff') format('woff'),
        url('../fonts/Circe-ExtraBold.ttf') format('truetype'),
        url('../fonts/Circe-ExtraBold.svg') format('svg');
