--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,1 @@
-// @import "../../node_modules/normalize.css/normalize";
-
-@import "../../node_modules/swiper/swiper-bundle"
+@import "../../node_modules/normalize.css/normalize";
