--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,10 +1,10 @@
 %сirce-regular{
-  font-family: 'Circe', sans-serif;
+  font-family: 'Circe Regular', sans-serif;
   font-weight: 400;
 }
 
 %сirce-extrabold{
-  font-family: 'Circe', sans-serif;
+  font-family: 'Circe ExtraBold', sans-serif;
   font-weight: 800;
 }
 
