--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,8 @@
-@import "vars";
 @import "libs";
 @import "fonts";
+@import "vars";
 @import "global";
 @import "header";
-@import "footer";
 
 .hero {
     background: #546f4e url("../images/hero-bg.jpg") center center;
@@ -195,9 +194,49 @@
     }
 }
 
-.swiper-container {
-    width: 600px;
-    height: 300px;
+.swiper {
+    &-container {
+        width: 100%;
+        height: 100%;
+    }
+    &-slide {
+        @media (max-width: 1918px) {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+    }
+    &-button-prev {
+        @media (min-width: 940px) {
+            left: 100px;
+        }
+
+        &::after {
+            @media (min-width: 1919px) {
+                display: none;
+            }
+            @media (max-width: 767px) {
+                display: none;
+            }
+            color: #62cc82;
+        }
+    }
+
+    &-button-next {
+        @media (min-width: 940px) {
+            right: 100px;
+        }
+        &::after {
+            @media (min-width: 1919px) {
+                display: none;
+            }
+            @media (max-width: 767px) {
+                display: none;
+            }
+            color: #62cc82;
+        }
+    }
 }
 
 .services {
@@ -212,21 +251,51 @@
 }
 
 .cards {
-    display: flex;
-    flex-wrap: wrap;
+    @media (min-width: 1919px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    @media (min-width: 2000px) {
+        justify-content: center;
+    }
+
     &__card {
-        flex-grow: 1;
+        width: fit-content;
+        @media (max-width: 767px) {
+            width: auto;
+        }
+        @media (min-width: 1919px) {
+            flex-grow: 1;
+        }
+        @media (min-width: 2000px) {
+            flex: 0 0 auto;
+        }
     }
     &__img {
         position: relative;
+        @media (max-width: 767px) {
+            text-align: center;
+        }
+        @media (min-width: 1919px) {
+            height: 100%;
+        }
+
         img {
-            display: block;
-            width: 100%;
-            height: 600px;
+            @media (max-width: 767px) {
+                max-width: 100%;
+            }
+            @media (min-width: 1919px) {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
         &:hover .cards__hover {
-            bottom: 0;
-            height: 100%;
+            @media (min-width: 768px) {
+                bottom: 0;
+                height: 100%;
+            }
         }
     }
     &__title {
@@ -240,6 +309,12 @@
         left: 81px;
         max-width: 300px;
         z-index: 6;
+        @media (max-width: 767px) {
+            font-size: 35px;
+            top: 40px;
+            left: 40%;
+            transform: translateX(-40%);
+        }
     }
     &__hover {
         width: 100%;
@@ -252,6 +327,9 @@
         right: 0;
         z-index: 4;
         transition: 0.4s ease;
+        @media (max-width: 767px) {
+            display: none;
+        }
         &-text {
             color: #fff;
             font-size: 14px;
@@ -297,7 +375,7 @@
             grid-template-columns: 1fr;
             grid-auto-rows: 180px;
         }
-        @media (max-width:426px){
+        @media (max-width: 426px) {
             grid-auto-rows: 100px;
         }
         & img {
@@ -539,9 +617,10 @@
             margin: 0 0 50px;
             max-width: 512px;
         }
-        @media (max-width: 426px) {
+        @media (max-width: 576px) {
             padding: 0 30px 38px 30px;
             margin: 0 0 35px;
+            font-size: 18px;
         }
         &-author {
             font-family: Arial, Helvetica, sans-serif;
@@ -560,7 +639,8 @@
             left: 0;
             bottom: 18px;
             @media (max-width: 576px) {
-                display: none;
+                z-index: 6;
+                opacity: 0.5;
             }
         }
         &::after {
@@ -572,7 +652,8 @@
             right: 0;
             top: -2px;
             @media (max-width: 576px) {
-                display: none;
+                z-index: 6;
+                opacity: 0.5;
             }
         }
     }
@@ -630,7 +711,9 @@
             height: auto;
         }
         &:hover .member__hover {
-            opacity: 1;
+            @media (min-width: 768px) {
+                opacity: 1;
+            }
         }
     }
     &__hover {
@@ -643,9 +726,18 @@
         left: 0;
         right: 0;
         z-index: 4;
-        transform: translate(-15px, -15px);
         transition: 0.4s ease;
-        opacity: 0;
+        opacity: 1;
+        @media (min-width: 768px) {
+            opacity: 0;
+            transform: translate(-15px, -15px);
+        }
+        @media (max-width: 767px) {
+            height: 60px;
+            bottom: 0;
+            top: auto;
+            right: auto;
+        }
         &-social {
             position: absolute;
             top: 50%;
@@ -683,9 +775,13 @@
         }
     }
     &__link {
-        svg {
+        img {
             width: 46px;
             height: 46px;
+            @media (max-width: 767px) {
+                width: 36px;
+                height: 36px;
+            }
         }
     }
 }
@@ -1014,3 +1110,5 @@
         }
     }
 }
+
+@import "footer";
