--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -200,12 +200,12 @@
         height: 100%;
     }
     &-slide {
-        @media (max-width: 1918px) {
-            display: flex;
-            align-items: center;
-            text-align: center;
-            justify-content: center;
-        }
+        // @media (max-width: 1918px) {
+        //     display: flex;
+        //     align-items: center;
+        //     text-align: center;
+        //     justify-content: center;
+        // }
     }
     &-button-prev {
         @media (min-width: 940px) {
@@ -213,7 +213,7 @@
         }
 
         &::after {
-            @media (min-width: 1919px) {
+            @media (min-width: 1023px) {
                 display: none;
             }
             @media (max-width: 767px) {
@@ -228,7 +228,7 @@
             right: 100px;
         }
         &::after {
-            @media (min-width: 1919px) {
+            @media (min-width: 1023px) {
                 display: none;
             }
             @media (max-width: 767px) {
@@ -247,48 +247,31 @@
     }
     &__cards {
         margin-bottom: 75px;
+        @media (max-width: 767px) {
+            margin-bottom: 45px;
+        }
     }
 }
 
 .cards {
-    @media (min-width: 1919px) {
-        display: flex;
-        flex-wrap: wrap;
+    @media (min-width: 1024px) {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 380px 1fr;
     }
-    @media (min-width: 2000px) {
-        justify-content: center;
-    }
-
-    &__card {
-        width: fit-content;
-        @media (max-width: 767px) {
-            width: auto;
-        }
-        @media (min-width: 1919px) {
-            flex-grow: 1;
-        }
-        @media (min-width: 2000px) {
-            flex: 0 0 auto;
-        }
+    @media (min-width: 1250px) {
+        grid-template-columns: 1fr 600px 1fr;
     }
     &__img {
         position: relative;
-        @media (max-width: 767px) {
-            text-align: center;
-        }
-        @media (min-width: 1919px) {
-            height: 100%;
-        }
-
         img {
             @media (max-width: 767px) {
-                max-width: 100%;
+                width: 70%;
             }
-            @media (min-width: 1919px) {
-                display: block;
+            @media (min-width: 1024px) {
                 width: 100%;
+                display: block;
                 height: 100%;
-                object-fit: cover;
             }
         }
         &:hover .cards__hover {
@@ -299,22 +282,27 @@
         }
     }
     &__title {
+        @media (min-width: 320px) {
+            font-size: 20px;
+            top: 20px;
+            left: 20%;
+        }
+        @media (min-width: 425px) {
+            font-size: 30px;
+            top: 40px;
+        }
+        @media (min-width: 1440px) {
+            font-size: 51px;
+            top: 91px;
+            left: 81px;
+        }
         color: #fff;
-        font-size: 51px;
         line-height: 38 / 51 * 100%;
         @extend %сirce-extrabold;
         text-align: left;
         position: absolute;
-        top: 91px;
-        left: 81px;
-        max-width: 300px;
+        max-width: 280px;
         z-index: 6;
-        @media (max-width: 767px) {
-            font-size: 35px;
-            top: 40px;
-            left: 40%;
-            transform: translateX(-40%);
-        }
     }
     &__hover {
         width: 100%;
@@ -327,19 +315,35 @@
         right: 0;
         z-index: 4;
         transition: 0.4s ease;
-        @media (max-width: 767px) {
+        margin: 0 auto;
+        @media (min-width: 320px) {
             display: none;
+        }
+        @media (min-width: 768px) {
+            display: block;
+        }
+        @media (max-width: 1023px){
+            width: 35%;
+            left: -30%;
         }
         &-text {
             color: #fff;
-            font-size: 14px;
-            line-height: 25px;
             @extend %myriadpro-regular;
+            max-width: 270px;
             text-align: left;
             position: absolute;
-            top: 225px;
-            left: 79px;
-            max-width: 270px;
+            @media (min-width: 320px) {
+                font-size: 18px;
+                left: 35%;
+                transform: translateX(-40%);
+            }
+            @media (min-width: 1023px) {
+                font-size: 14px;
+                line-height: 25px;
+                top: 50%;
+                left: 79px;
+                transform: translateX(0);
+            }
         }
     }
 }
