--- a/app/css/style.css
+++ b/app/css/style.css
@@ -534,8 +534,7 @@ body.lock {
 .gallery__wrapper img {
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-  object-fit: cover
+  display: block
 }
 .gallery__box-1 {
   -ms-grid-column: 1;
@@ -1138,12 +1137,7 @@ body.lock {
     left: 81px
   }
 }
-@media (max-width:1550px) {
-  .gallery__wrapper {
-    -ms-grid-columns: 2fr 2fr;
-    grid-template-columns: 2fr 2fr;
-    grid-auto-rows: 280px
-  }
+@media (max-width:14000px) {
   .gallery__box-6 {
     -ms-grid-column: 2;
     grid-column-start: 2;
@@ -1166,6 +1160,17 @@ body.lock {
   }
   .achievements__card {
     margin: 15px
+  }
+}
+@media (max-width:1400px) {
+  .gallery__wrapper {
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 280px
+  }
+  .gallery__wrapper img {
+    -o-object-fit: cover;
+    object-fit: cover
   }
 }
 @media (max-width:1350px) {
@@ -1277,25 +1282,6 @@ body.lock {
   .cards__hover {
     width: 35%;
     left: -30%
-  }
-  .gallery__wrapper {
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-    grid-auto-rows: 180px
-  }
-  .gallery__box-1 {
-    -ms-grid-column-span: 4;
-    grid-column-end: 4
-  }
-  .gallery__box-2 {
-    -ms-grid-row: 3;
-    grid-row-start: 3;
-    -ms-grid-row-span: 1;
-    grid-row-end: 4
-  }
-  .gallery__box-6 {
-    -ms-grid-column-span: 3;
-    grid-column-end: 3
   }
 }
 @media (max-width:1000px) {
@@ -1550,6 +1536,31 @@ body.lock {
   .gallery__title {
     margin-bottom: 40px
   }
+  .gallery__wrapper {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 180px
+  }
+  .gallery__box-3 {
+    -ms-grid-column: 3;
+    grid-column-start: 3;
+    -ms-grid-row: 3;
+    grid-row-start: 3
+  }
+  .gallery__box-4 {
+    -ms-grid-column: 2;
+    grid-column-start: 2;
+    -ms-grid-row: 3;
+    grid-row-start: 3
+  }
+  .gallery__box-5 {
+    -ms-grid-column: 2;
+    grid-column-start: 2
+  }
+  .gallery__box-6 {
+    -ms-grid-column: 1;
+    grid-column-start: 1
+  }
   .our-elephants {
     padding: 34px 0 44px
   }
@@ -1745,9 +1756,6 @@ body.lock {
   }
 }
 @media (max-width:426px) {
-  .gallery__wrapper {
-    grid-auto-rows: 100px
-  }
   .reviews__box:last-child {
     margin-bottom: 0
   }
