--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -199,14 +199,6 @@
         width: 100%;
         height: 100%;
     }
-    &-slide {
-        // @media (max-width: 1918px) {
-        //     display: flex;
-        //     align-items: center;
-        //     text-align: center;
-        //     justify-content: center;
-        // }
-    }
     &-button-prev {
         @media (min-width: 940px) {
             left: 100px;
@@ -371,46 +363,56 @@
         display: grid;
         grid-template-columns: 1fr 1fr 365px 1fr;
         grid-auto-rows: 408px;
-        @media (max-width: 1550px) {
-            grid-template-columns: 2fr 2fr;
+        @media (max-width: 1400px) {
+            grid-template-columns: 1fr 1fr 1fr;
             grid-auto-rows: 280px;
         }
-        @media (max-width: 1023px) {
+        @media (max-width: 767px) {
             grid-template-columns: 1fr;
             grid-auto-rows: 180px;
-        }
-        @media (max-width: 426px) {
-            grid-auto-rows: 100px;
         }
         & img {
             height: 100%;
             width: 100%;
-            object-fit: cover;
+            display: block;
+            @media (max-width: 1400px) {
+                object-fit: cover;
+            }
         }
     }
     &__box-1 {
         grid-column-start: 1;
         grid-column-end: 3;
-        @media (max-width: 1023px) {
-            grid-column-end: 4;
-        }
     }
     &__box-2 {
         grid-column-start: 3;
         grid-row-start: 1;
         grid-row-end: 3;
-        @media (max-width: 1023px) {
+    }
+    &__box-3{
+        @media (max-width: 767px) {
+            grid-column-start: 3;
             grid-row-start: 3;
-            grid-row-end: 4;
+        }
+    }
+    &__box-4{
+        @media (max-width: 767px) {
+            grid-column-start: 2;
+            grid-row-start: 3;
+        }
+    }
+    &__box-5{
+        @media (max-width: 767px) {
+            grid-column-start: 2;
         }
     }
     &__box-6 {
-        @media (max-width: 1550px) {
+        @media (max-width: 14000px) {
             grid-column-start: 2;
             grid-column-end: 4;
         }
-        @media (max-width: 1023px) {
-            grid-column-end: 3;
+        @media (max-width: 767px) {
+            grid-column-start: 1;
         }
     }
 }
